CHANGES
=======

1.20 (unreleased)
-----------------

- Nothing changed yet.


1.19.1 (2009-09-28)
-------------------

- Removed a savepoint to avoid garbage collection which lead to LockingErrors.
  Note that this probably is a ZODB bug we're working around here.


1.19 (2009-09-24)
-----------------

- Honour the ETAG for PUT requests so there is a way to detect conflicts.

- Refactored DAV exceptions and exception handling to get this mor straight.

- Autolocks when adding content are immeadeately removed when there was an
  error during PUT or PROPPATCH.

1.18.4 (2009-09-21)
-------------------

- PROPPATCH on a locked resource raises correct DAVLockedError (#6237).


1.18.3 (2009-09-06)
-------------------

- Fixed test as content changes.


1.18.2 (2009-09-01)
-------------------

- Fixed Property conflict resolution with ZODB 3.9.0c


1.18.1 (2009-08-18)
-------------------

- Python 2.6 compatibility.

1.18 (2009-08-14)
-----------------

- There was a chance that cache inconsitencies could yield a KeyError: "The
  resource xzy does not exist." (#5993).

1.17.1 (2009-08-05)
-------------------

- Refactored body cache to no longer reuse blobs for even better conflict
  resolution.

1.17 (2009-07-24)
-----------------

- Fixed an issue with vanishing Blob files sending a POSKeyError to the user.

- Refactored body cache store Body objects which do conflict resolution. This
  way two threads storing the same body don't generate a conflict.

1.16.1 (2099-07-23)
-------------------

- Fixed a unicode bug in cache (related to #5580).

1.16 (2009-07-23)
-----------------

- Reuse Blobs instead of creating new ones when updating resources (#5580).

- Don't fail in abort clean up when a lock has timed out (#5578).

1.15.1 (2009-06-25)
-------------------

- Make sure no SecurityProxies are tried to be stored as cache keys.

1.15 (2009-06-24)
-----------------

- Support UTF8 characters in URLs (#5534).

- Make less HEAD requests.
