@@ -110,10 +110,12 @@ class Connector(object):
     def __setitem__(self, id, object):
         resource = zeit.connector.interfaces.IResource(object)
         if id in self:
-            new_etag = resource.properties.get(('getetag', 'DAV:'))
             old_etag = self[id].properties.get(('getetag', 'DAV:'))
-            if new_etag and old_etag and new_etag != old_etag:
-                raise zeit.connector.dav.interfaces.PreconditionFailedError()
+        else:
+            old_etag = None
+        new_etag = resource.properties.get(('getetag', 'DAV:'))
+        if new_etag and new_etag != old_etag:
+            raise zeit.connector.dav.interfaces.PreconditionFailedError()
         if id in self._deleted:
             self._deleted.remove(id)
         # Just a very basic in-memory data storage for testing purposes.
